tests/errors/syntax/missing_condition_on_if.odl
main :: () -> void {
    if x := 0; y := 0 then return;
};